Adding README.md

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
     </main>
     <footer >
-        <div id="video">   
+        <div>   
             <video src="/" poster="/assets/img-video.png"></video>
         </div>
         <div>
